@@ -5,6 +5,7 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+ - 12-06-2006 added: System.dvdready and System.trayopen conditional visibility tag.
  - 12-06-2006 fixed: Added additional late check for X+Y button combo for debugging.
  - 12-06-2006 changed: Added black border around freemem and remote code info for better readability.
  - 12-06-2006 fixed: Start button mapped in virtual keyboard to Done now as well.
